fix hyperlinks - sorry, had to change the interface to use URI over URL