@@ -7,6 +7,8 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -21,17 +23,17 @@ class PoiWorkbookTest {
             .resolve("../../../../../testdata").normalize();
 
     @Test
-    public void testXlsx() throws IOException {
+    public void testXlsx() throws IOException, URISyntaxException {
         testCountryWorkbook(testdataDir.resolve("population by country.xlsx"));
     }
 
     @Test
-    public void testXls() throws IOException {
+    public void testXls() throws IOException, URISyntaxException {
         testCountryWorkbook(testdataDir.resolve("population by country.xls"));
     }
 
     @Test
-    public void testSaveAndReloadXlsx() throws IOException {
+    public void testSaveAndReloadXlsx() throws IOException, URISyntaxException {
         Workbook original = MejaHelper.openWorkbook(testdataDir.resolve("population by country.xlsx"));
         Path pathToCopy = testdataDir.resolve("population by country (copy).xlsx");
         original.write(pathToCopy);
@@ -39,7 +41,7 @@ class PoiWorkbookTest {
     }
 
     @Test
-    public void testSaveAndReloadXls() throws IOException {
+    public void testSaveAndReloadXls() throws IOException, URISyntaxException {
         Workbook original = MejaHelper.openWorkbook(testdataDir.resolve("population by country.xls"));
         Path pathToCopy = testdataDir.resolve("population by country (copy).xls");
         original.write(pathToCopy);
@@ -47,7 +49,7 @@ class PoiWorkbookTest {
     }
 
     @Test
-    public void testConvertXlsxToXls() throws IOException {
+    public void testConvertXlsxToXls() throws IOException, URISyntaxException {
         Workbook original = MejaHelper.openWorkbook(testdataDir.resolve("population by country.xlsx"));
         Path pathToCopy = testdataDir.resolve("population by country (copy).xls");
         try {
@@ -60,7 +62,7 @@ class PoiWorkbookTest {
 
     @Test
     @Disabled("POI bug") // TODO create bug report and fix
-    public void testConvertXlsToXlsx() throws IOException {
+    public void testConvertXlsToXlsx() throws IOException, URISyntaxException {
         Workbook original = MejaHelper.openWorkbook(testdataDir.resolve("population by country.xls"));
         String wbFilename = "population by country (copy).xlsx";
         Path pathToCopy = testdataDir.resolve(wbFilename);
@@ -72,7 +74,7 @@ class PoiWorkbookTest {
         }
     }
 
-    private void testCountryWorkbook(Path pathToWorkbook) throws IOException {
+    private void testCountryWorkbook(Path pathToWorkbook) throws IOException, URISyntaxException {
         Workbook wb = MejaHelper.openWorkbook(pathToWorkbook);
         assertEquals(1, wb.getSheetCount());
 
@@ -89,9 +91,9 @@ class PoiWorkbookTest {
         assertEquals("China", Objects.toString(cChina.getText()));
         assertEquals("China", cChina.toString());
 
-        Optional<URL> lChina = cChina.getHyperlink();
+        Optional<URI> lChina = cChina.getHyperlink();
         assertNotNull(lChina);
-        assertEquals(new URL("https://www.worldometers.info/world-population/china-population/"), lChina.get());
+        assertEquals(new URI("https://www.worldometers.info/world-population/china-population/"), lChina.get());
 
         double[] sums = { 0.0, 7_794_798_739.0, 2.5957, 81_330_639.0, 111_806.0, 130_094_083.0, 1_263.0, 541.3, 6_152.0, 131.5, 0.9998 };
 
@@ -107,20 +109,31 @@ class PoiWorkbookTest {
     }
 
     @Test
-    public void testHyperLink() throws IOException {
+    public void testHyperLink() throws IOException, URISyntaxException {
         Workbook wb = MejaHelper.openWorkbook(testdataDir.resolve("Links.xlsx"));
         Sheet sheet = wb.getSheetByName("Links");
 
         Cell cCalendar = sheet.getCell(0,1);
         assertEquals("Calendar", cCalendar.toString());
-        Optional<URL> lCalendar = cCalendar.getHyperlink();
+        Optional<URI> lCalendar = cCalendar.getHyperlink();
         assertTrue(lCalendar.isPresent());
-        assertEquals(IOUtil.toURL(testdataDir.resolve("Excel 2015 Calendar.xlsx")), lCalendar.get());
+        assertEquals(IOUtil.toURI(testdataDir.resolve("Excel 2015 Calendar.xlsx")), lCalendar.get());
 
         Cell cEmail = sheet.getCell(2,1);
         assertEquals("Email Developer", cEmail.toString());
-        Optional<URL> lEmail = cEmail.getHyperlink();
+        Optional<URI> lEmail = cEmail.getHyperlink();
         assertTrue(lEmail.isPresent());
-        assertEquals(new URL("mailto:mailto:axel@dua3.com?subject=Meja%20Test%20Email"), lEmail.get());
+        assertEquals(new URI("mailto:axel@dua3.com?subject=Meja%20Test%20Email"), lEmail.get());
+
+        Workbook wb2 = PoiWorkbookFactory.instance().createXlsx();
+        Sheet sheet2 = wb2.createSheet("Links");
+
+        Cell cellLinkToFile = sheet2.getCell(0,0);
+        cellLinkToFile.setHyperlink(lCalendar.get());
+        assertEquals(lCalendar.get(), cellLinkToFile.getHyperlink().get());
+
+        Cell cellLinkToEmail = sheet2.getCell(1,0);
+        cellLinkToEmail.setHyperlink(lEmail.get());
+        assertEquals(lEmail.get(), cellLinkToEmail.getHyperlink().get());
     }
 }
